--- a/AMTRevolution/App.xaml
+++ b/AMTRevolution/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:AMTRevolution"
-             StartupUri="MainWindow.xaml">
+             Startup="AMTRevolution_Startup">
     <Application.Resources>
          
     </Application.Resources>
