--- a/AMTRevolution/GUI/MainWindow.xaml
+++ b/AMTRevolution/GUI/MainWindow.xaml
@@ -8,25 +8,28 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AMTRevolution"
         mc:Ignorable="d"
-        Title="AMT Revolution" Height="600" Width="800" WindowStyle="None" AllowsTransparency="True" WindowStartupLocation="CenterScreen" Icon="../IconRes/WindowIcons/vf.ico">
+        Title="AMT Revolution" Height="600" Width="1100" WindowStyle="None" AllowsTransparency="True" WindowStartupLocation="CenterScreen" Icon="../IconRes/WindowIcons/vf.ico" MouseDown="Window_MouseDown" ResizeMode="NoResize">
     <Window.Background>
         <LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
             <GradientStop Color="Black" Offset="0"/>
             <GradientStop Color="Red" Offset="1"/>
         </LinearGradientBrush>
     </Window.Background>
+    <Window.Resources>
+        <Storyboard x:Key="showmainMenuPanel" >
+            <ThicknessAnimation Storyboard.TargetProperty="Margin" From="-150,0,0,0" To="0,0,0,0" DecelerationRatio=".9" Duration="0:0:0:0.5" />
+        </Storyboard>
+        <Storyboard x:Key="hidemainMenuPanel">
+            <ThicknessAnimation Storyboard.TargetProperty="Margin" From="0,0,0,0" To="-150,0,0,0" AccelerationRatio=".9" Duration="0:0:0:0.3" />
+        </Storyboard>
+    </Window.Resources>
     <Grid>
-        <Button x:Name="exitBtt" Content="" ToolTip="Exit AMT Revolution" HorizontalAlignment="Left" Margin="761,10,0,0" VerticalAlignment="Top" Width="29" RenderTransformOrigin="1.211,0.63" BorderBrush="{x:Null}" Foreground="{x:Null}" Click="exitBtt_Click" Height="28" VerticalContentAlignment="Top" HorizontalContentAlignment="Right">
+        <Button x:Name="exitBtt" Content="" ToolTip="Exit AMT Revolution" HorizontalAlignment="Left" Margin="1061,10,0,0" VerticalAlignment="Top" Width="29" RenderTransformOrigin="1.211,0.63" BorderBrush="{x:Null}" Foreground="{x:Null}" Click="exitBtt_Click" Height="28" VerticalContentAlignment="Top" HorizontalContentAlignment="Right">
             <Button.OpacityMask>
                 <ImageBrush ImageSource="../IconRes/WindowIcons/exit-48.png" Stretch="Uniform"/>
             </Button.OpacityMask>
         </Button>
-        <Button x:Name="maxiBtt" Content="" ToolTip="Maximize AMT Revolution" HorizontalAlignment="Left" Margin="727,10,0,0" VerticalAlignment="Top" Width="29" RenderTransformOrigin="1.211,0.63" Background="#FFDDDDDD" BorderBrush="{x:Null}" Foreground="{x:Null}" Click="maxiBtt_Click" Height="28">
-            <Button.OpacityMask>
-                <ImageBrush ImageSource="../IconRes/WindowIcons/maximize_window-48.png" Stretch="Uniform"/>
-            </Button.OpacityMask>
-        </Button>
-        <Button x:Name="minBtt" Content="" ToolTip="Minimize AMT Revolution" HorizontalAlignment="Left" Margin="693,10,0,0" VerticalAlignment="Top" Width="29" RenderTransformOrigin="1.211,0.63" BorderBrush="{x:Null}" Foreground="{x:Null}" Click="minBtt_Click" Height="28">
+        <Button x:Name="minBtt" Content="" ToolTip="Minimize AMT Revolution" HorizontalAlignment="Left" Margin="1027,10,0,0" VerticalAlignment="Top" Width="29" RenderTransformOrigin="1.211,0.63" BorderBrush="{x:Null}" Foreground="{x:Null}" Click="minBtt_Click" Height="28">
             <Button.OpacityMask>
                 <ImageBrush Stretch="Uniform" ImageSource="../IconRes/WindowIcons/minimize_window-48.png"/>
             </Button.OpacityMask>
@@ -37,34 +40,18 @@
                 <ImageBrush ImageSource="../IconRes/WindowIcons/menu-48.png" Stretch="Uniform"/>
             </Button.OpacityMask>
         </Button>
-        <Popup x:Name="mainMenuPopup" PopupAnimation="Fade" PlacementTarget="{Binding ElementName=mainMenuBtt}" AllowsTransparency="True">
-            <StackPanel>
-                <!-- Menu Items -->
-                <!-- New template Btt -->
-                <Button x:Name="newTemplateBtt" ToolTip="New template" Width="29" BorderBrush="{x:Null}" Foreground="{x:Null}" Background="#FFDDDDDD" BorderThickness="1,0,1,1" Height="30" Click="newTemplateBtt_Click">
-                    <Button.OpacityMask>
-                        <ImageBrush Stretch="Uniform" ImageSource="../IconRes/MenuIcons/document-48.png"/>
-                    </Button.OpacityMask>
-                </Button>
-                <!-- Search Site Btt -->
-                <Button x:Name="searchSiteBtt" ToolTip="Search Site" Width="29" BorderBrush="{x:Null}" Foreground="{x:Null}" Background="#FFDDDDDD" BorderThickness="1,0,1,1" Height="30" Click="searchSiteBtt_Click">
-                    <Button.OpacityMask>
-                        <ImageBrush Stretch="Uniform" ImageSource="../IconRes/MenuIcons/search-48.png"/>
-                    </Button.OpacityMask>
-                </Button>
-                <!-- About Btt -->
-                <Button x:Name="aboutBtt" ToolTip="About AMT Revolution" Width="29" BorderBrush="{x:Null}" Foreground="{x:Null}" Background="#FFDDDDDD" BorderThickness="1,0,1,1" Height="30" Click="aboutBtt_Click">
-                    <Button.OpacityMask>
-                        <ImageBrush Stretch="Uniform" ImageSource="../IconRes/MenuIcons/about-48.png"/>
-                    </Button.OpacityMask>
-                </Button>
-                <!-- Settings Btt -->
-                <Button x:Name="settingsBtt" ToolTip="AMT Revolution Settings" Width="29" BorderBrush="{x:Null}" Foreground="{x:Null}" Background="#FFDDDDDD" BorderThickness="1,0,1,1" Height="30" Click="settingsBtt_Click">
-                    <Button.OpacityMask>
-                        <ImageBrush Stretch="Uniform" ImageSource="../IconRes/MenuIcons/settings-48.png"/>
-                    </Button.OpacityMask>
-                </Button>
-            </StackPanel>
-        </Popup>
+        <Grid Name="mainMenuPanel" Height="600" HorizontalAlignment="Left" Margin="-150,0,0,0">
+            <Border BorderThickness="0" Width="150" Background="#4C808080" />
+            <Grid>
+                <Button x:Name="templatesBtt" Content="Templates" ToolTip="Remedy Templates" HorizontalAlignment="Left" Margin="0,65,0,0" VerticalAlignment="Top" Width="150" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FFDDDDDD" Height="30" Click="templatesBtt_Click" BorderThickness="0,0,0,0"/>
+                <Button x:Name="siteSearchBtt" Content="Search Site" ToolTip="Search Site" HorizontalAlignment="Left" Margin="0,95,0,0" VerticalAlignment="Top" Width="150" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FFDDDDDD" Height="30" Click="searchSiteBtt_Click" BorderThickness="0,0,0,0"/>
+                <Button x:Name="scriptsBtt" Content="Scripts" ToolTip="NE Scripts" HorizontalAlignment="Left" Margin="0,125,0,0" VerticalAlignment="Top" Width="150" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FFDDDDDD" Height="30" Click="scriptsBtt_Click" BorderThickness="0,0,0,0"/>
+                <Button x:Name="ccBtt" Content="Closure Code" ToolTip="Closure Code" HorizontalAlignment="Left" Margin="0,155,0,0" VerticalAlignment="Top" Width="150" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FFDDDDDD" Height="30" Click="ccBtt_Click" BorderThickness="0,0,0,0"/>
+                <Button x:Name="outagesBtt" Content="Outages" ToolTip="Outages Parser" HorizontalAlignment="Left" Margin="0,185,0,0" VerticalAlignment="Top" Width="150" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FFDDDDDD" Height="30" Click="outagesBtt_Click" BorderThickness="0,0,0,0"/>
+                <Button x:Name="netcoolParserBtt" Content="Netcool" ToolTip="Netcool Parser" HorizontalAlignment="Left" Margin="0,215,0,0" VerticalAlignment="Top" Width="150" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FFDDDDDD" Height="30" Click="netcoolParserBtt_Click" BorderThickness="0,0,0,0"/>
+                <Button x:Name="aboutBtt" Content="About" ToolTip="About AMT Revolution" HorizontalAlignment="Left" Margin="0,245,0,0" VerticalAlignment="Top" Width="150" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FFDDDDDD" Height="30" Click="aboutBtt_Click" BorderThickness="0,0,0,0"/>
+                <Button x:Name="settingsBtt" Content="Settings" ToolTip="AMT Revolution Settings" HorizontalAlignment="Left" Margin="0,275,0,0" VerticalAlignment="Top" Width="150" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FFDDDDDD" Height="30" Click="settingsBtt_Click" BorderThickness="0,0,0,0"/>
+            </Grid>
+        </Grid>
     </Grid>
 </Window>
