--- a/AMTRevolution/GUI/MainWindow.xaml
+++ b/AMTRevolution/GUI/MainWindow.xaml
@@ -51,6 +51,7 @@
                 <Button x:Name="netcoolParserBtt" Content="Netcool" ToolTip="Netcool Parser" HorizontalAlignment="Left" Margin="0,215,0,0" VerticalAlignment="Top" Width="150" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FFDDDDDD" Height="30" Click="netcoolParserBtt_Click" BorderThickness="0,0,0,0"/>
                 <Button x:Name="aboutBtt" Content="About" ToolTip="About AMT Revolution" HorizontalAlignment="Left" Margin="0,245,0,0" VerticalAlignment="Top" Width="150" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FFDDDDDD" Height="30" Click="aboutBtt_Click" BorderThickness="0,0,0,0"/>
                 <Button x:Name="settingsBtt" Content="Settings" ToolTip="AMT Revolution Settings" HorizontalAlignment="Left" Margin="0,275,0,0" VerticalAlignment="Top" Width="150" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FFDDDDDD" Height="30" Click="settingsBtt_Click" BorderThickness="0,0,0,0"/>
+                <Button x:Name="exitMenuBtt" Content="Exit" ToolTip="Exit AMT Revolution" HorizontalAlignment="Left" Margin="0,305,0,0" VerticalAlignment="Top" Width="150" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FFDDDDDD" Height="30" Click="exitBtt_Click" BorderThickness="0,0,0,0"/>
             </Grid>
         </Grid>
     </Grid>
