--- a/AMTRevolution/splashScreen.xaml
+++ b/AMTRevolution/splashScreen.xaml
@@ -6,19 +6,20 @@
         xmlns:local="clr-namespace:AMTRevolution"
         xmlns:gif="http://wpfanimatedgif.codeplex.com" x:Name="splashScreen1" x:Class="AMTRevolution.splashScreen"
         mc:Ignorable="d"
-        Title="splashScreen" Height="240" Width="500" WindowStartupLocation="CenterScreen" WindowStyle="None" ResizeMode="NoResize">
+        Title="splashScreen" Height="240" Width="500" WindowStartupLocation="CenterScreen" WindowStyle="None" ResizeMode="NoResize" Topmost="True" Icon="IconRes/WindowIcons/vf.ico">
     <Grid Margin="0,0,0,0" RenderTransformOrigin="0,0" Background="Black">
         <Grid.RowDefinitions>
             <RowDefinition Height="13*"/>
             <RowDefinition Height="228*"/>
         </Grid.RowDefinitions>
         <Label x:Name="label" Content="AMT Revolution" HorizontalAlignment="Left" Margin="190,21.2,0,0" VerticalAlignment="Top" Foreground="#FFDDDDDD" FontFamily="Bauhaus 93" FontSize="16" Grid.Row="1" Width="120"/>
-        <Label x:Name="buildLabel" Content="Build " HorizontalAlignment="Left" Margin="10,191.5,0,0" VerticalAlignment="Top" Width="133" Foreground="#FFDDDDDD" Grid.Row="1"/>
         <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Margin="452,179.2,0,0" VerticalAlignment="Top" Width="38" BorderBrush="{x:Null}" Foreground="{x:Null}" Grid.Row="1" RenderTransformOrigin="1.016,1.565" Height="38">
             <Button.Background>
                 <ImageBrush Stretch="Uniform" ImageSource="IconRes/WindowIcons/vf.ico"/>
             </Button.Background>
         </Button>
-        <MediaElement LoadedBehavior="Play" Width="100" Source="/IconRes/WindowIcons/loading.gif" Margin="200,54.2,200,36" Grid.Row="1"/>
+        <MediaElement x:Name="splashMedia" Source="IconRes/WindowIcons/Loading.gif" MediaEnded="myGif_MediaEnded" UnloadedBehavior="Play" LoadedBehavior="Play" HorizontalAlignment="Left" Height="100" Margin="200,59.2,0,0" Grid.Row="1" VerticalAlignment="Top" Width="100"/>
+        <TextBlock x:Name="statusLabel" HorizontalAlignment="Left" Margin="10,179.2,0,0" Grid.Row="1" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Width="133" Foreground="#FFDDDDDD"/>
+        <TextBlock x:Name="buildLabel" HorizontalAlignment="Left" Margin="10,200.2,0,0" Grid.Row="1" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Foreground="#FFDDDDDD"/>
     </Grid>
 </Window>
