--- a/AMTRevolution/GUI/MainWindow.xaml
+++ b/AMTRevolution/GUI/MainWindow.xaml
@@ -22,6 +22,23 @@
         <Storyboard x:Key="hidemainMenuPanel">
             <ThicknessAnimation Storyboard.TargetProperty="Margin" From="0,0,0,0" To="-150,0,0,0" AccelerationRatio=".9" Duration="0:0:0:0.3" />
         </Storyboard>
+        <Style x:Key="menuBtts" TargetType="Button">
+            <Setter Property="Background" Value="Green"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border Background="{TemplateBinding Background}">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="DarkGoldenrod"/>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
     </Window.Resources>
     <Grid>
         <Button x:Name="exitBtt" Content="" ToolTip="Exit AMT Revolution" HorizontalAlignment="Left" Margin="1061,10,0,0" VerticalAlignment="Top" Width="29" RenderTransformOrigin="1.211,0.63" BorderBrush="{x:Null}" Foreground="{x:Null}" Click="exitBtt_Click" Height="28" VerticalContentAlignment="Top" HorizontalContentAlignment="Right">
@@ -43,18 +60,18 @@
         <Grid Name="mainMenuPanel" Height="600" HorizontalAlignment="Left" Margin="-150,0,0,0">
             <Border BorderThickness="0" Width="150" Background="#4C808080" />
             <Grid>
-                <Button x:Name="templatesBtt" Content="Templates" ToolTip="Remedy Templates" HorizontalAlignment="Left" Margin="0,65,0,0" VerticalAlignment="Top" Width="150" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FFDDDDDD" Height="30" Click="templatesBtt_Click" BorderThickness="0,0,0,0"/>
-                <Button x:Name="siteSearchBtt" Content="Search Site" ToolTip="Search Site" HorizontalAlignment="Left" Margin="0,95,0,0" VerticalAlignment="Top" Width="150" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FFDDDDDD" Height="30" Click="searchSiteBtt_Click" BorderThickness="0,0,0,0"/>
-                <Button x:Name="scriptsBtt" Content="Scripts" ToolTip="NE Scripts" HorizontalAlignment="Left" Margin="0,125,0,0" VerticalAlignment="Top" Width="150" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FFDDDDDD" Height="30" Click="scriptsBtt_Click" BorderThickness="0,0,0,0"/>
-                <Button x:Name="ccBtt" Content="Closure Code" ToolTip="Closure Code" HorizontalAlignment="Left" Margin="0,155,0,0" VerticalAlignment="Top" Width="150" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FFDDDDDD" Height="30" Click="ccBtt_Click" BorderThickness="0,0,0,0"/>
-                <Button x:Name="outagesBtt" Content="Outages" ToolTip="Outages Parser" HorizontalAlignment="Left" Margin="0,185,0,0" VerticalAlignment="Top" Width="150" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FFDDDDDD" Height="30" Click="outagesBtt_Click" BorderThickness="0,0,0,0"/>
-                <Button x:Name="netcoolParserBtt" Content="Netcool" ToolTip="Netcool Parser" HorizontalAlignment="Left" Margin="0,215,0,0" VerticalAlignment="Top" Width="150" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FFDDDDDD" Height="30" Click="netcoolParserBtt_Click" BorderThickness="0,0,0,0"/>
-                <Button x:Name="aboutBtt" Content="About" ToolTip="About AMT Revolution" HorizontalAlignment="Left" Margin="0,245,0,0" VerticalAlignment="Top" Width="150" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FFDDDDDD" Height="30" Click="aboutBtt_Click" BorderThickness="0,0,0,0"/>
-                <Button x:Name="settingsBtt" Content="Settings" ToolTip="AMT Revolution Settings" HorizontalAlignment="Left" Margin="0,275,0,0" VerticalAlignment="Top" Width="150" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FFDDDDDD" Height="30" Click="settingsBtt_Click" BorderThickness="0,0,0,0"/>
-                <Button x:Name="exitMenuBtt" Content="Exit" ToolTip="Exit AMT Revolution" HorizontalAlignment="Left" Margin="0,305,0,0" VerticalAlignment="Top" Width="150" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FFDDDDDD" Height="30" Click="exitBtt_Click" BorderThickness="0,0,0,0"/>
+                <Button x:Name="templatesBtt" Style="{StaticResource menuBtts}" Content="Templates" ToolTip="Remedy Templates" HorizontalAlignment="Left" Margin="0,65,0,0" VerticalAlignment="Top" Width="150" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FFDDDDDD" Height="30" Click="templatesBtt_Click" BorderThickness="0,0,0,0"/>
+                <Button x:Name="siteSearchBtt" Style="{StaticResource menuBtts}" Content="Search Site" ToolTip="Search Site" HorizontalAlignment="Left" Margin="0,95,0,0" VerticalAlignment="Top" Width="150" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FFDDDDDD" Height="30" Click="searchSiteBtt_Click" BorderThickness="0,0,0,0"/>
+                <Button x:Name="scriptsBtt" Style="{StaticResource menuBtts}" Content="Scripts" ToolTip="NE Scripts" HorizontalAlignment="Left" Margin="0,125,0,0" VerticalAlignment="Top" Width="150" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FFDDDDDD" Height="30" Click="scriptsBtt_Click" BorderThickness="0,0,0,0"/>
+                <Button x:Name="ccBtt" Style="{StaticResource menuBtts}" Content="Closure Code" ToolTip="Closure Code" HorizontalAlignment="Left" Margin="0,155,0,0" VerticalAlignment="Top" Width="150" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FFDDDDDD" Height="30" Click="ccBtt_Click" BorderThickness="0,0,0,0"/>
+                <Button x:Name="outagesBtt" Style="{StaticResource menuBtts}" Content="Outages" ToolTip="Outages Parser" HorizontalAlignment="Left" Margin="0,185,0,0" VerticalAlignment="Top" Width="150" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FFDDDDDD" Height="30" Click="outagesBtt_Click" BorderThickness="0,0,0,0"/>
+                <Button x:Name="netcoolParserBtt" Style="{StaticResource menuBtts}" Content="Netcool" ToolTip="Netcool Parser" HorizontalAlignment="Left" Margin="0,215,0,0" VerticalAlignment="Top" Width="150" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FFDDDDDD" Height="30" Click="netcoolParserBtt_Click" BorderThickness="0,0,0,0"/>
+                <Button x:Name="aboutBtt" Style="{StaticResource menuBtts}" Content="About" ToolTip="About AMT Revolution" HorizontalAlignment="Left" Margin="0,245,0,0" VerticalAlignment="Top" Width="150" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FFDDDDDD" Height="30" Click="aboutBtt_Click" BorderThickness="0,0,0,0"/>
+                <Button x:Name="settingsBtt" Style="{StaticResource menuBtts}" Content="Settings" ToolTip="AMT Revolution Settings" HorizontalAlignment="Left" Margin="0,275,0,0" VerticalAlignment="Top" Width="150" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FFDDDDDD" Height="30" Click="settingsBtt_Click" BorderThickness="0,0,0,0"/>
+                <Button x:Name="exitMenuBtt" Style="{StaticResource menuBtts}" Content="Exit" ToolTip="Exit AMT Revolution" HorizontalAlignment="Left" Margin="0,305,0,0" VerticalAlignment="Top" Width="150" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FFDDDDDD" Height="30" Click="exitBtt_Click" BorderThickness="0,0,0,0" IsManipulationEnabled="True"/>
             </Grid>
         </Grid>
-        <Button x:Name="debugModeBtt" Content="Button" HorizontalAlignment="Left" Margin="1027,545,0,0" VerticalAlignment="Top" Width="63" RenderTransformOrigin="0.501,1.878" BorderBrush="{x:Null}" Foreground="{x:Null}" Background="#FFDDDDDD" Height="45" IsManipulationEnabled="True">
+        <Button x:Name="debugModeBtt" Content="Button" ToolTip="Debug Mode Enabled" HorizontalAlignment="Left" Margin="1027,545,0,0" VerticalAlignment="Top" Width="63" RenderTransformOrigin="0.501,1.878" BorderBrush="{x:Null}" Foreground="{x:Null}" Background="#FFDDDDDD" Height="45" IsManipulationEnabled="True">
             <Button.OpacityMask>
                 <ImageBrush Stretch="Uniform" ImageSource="/AMTRevolution;component/IconRes/WindowIcons/bug-48.png"/>
             </Button.OpacityMask>
