--- a/AMTRevolution/GUI/MainWindow.xaml
+++ b/AMTRevolution/GUI/MainWindow.xaml
@@ -22,6 +22,12 @@
         <Storyboard x:Key="hidemainMenuPanel">
             <ThicknessAnimation Storyboard.TargetProperty="Margin" From="0,0,0,0" To="-150,0,0,0" AccelerationRatio=".9" Duration="0:0:0:0.3" />
         </Storyboard>
+        <Storyboard x:Key="showCCPanel" >
+            <ThicknessAnimation Storyboard.TargetProperty="Margin" From="1250,0,0,0" To="-150,0,0,0" DecelerationRatio=".9" Duration="0:0:0:0.5" />
+        </Storyboard>
+        <Storyboard x:Key="hideCCPanel">
+            <ThicknessAnimation Storyboard.TargetProperty="Margin" From="50,0,0,0" To="1250,0,0,0" AccelerationRatio=".9" Duration="0:0:0:0.3" />
+        </Storyboard>
         <Style x:Key="menuBtts" TargetType="Button">
             <Setter Property="Background" Value="Green"/>
             <Setter Property="Template">
@@ -70,6 +76,30 @@
                 <Button x:Name="settingsBtt" Style="{StaticResource menuBtts}" Content="Settings" ToolTip="AMT Revolution Settings" HorizontalAlignment="Left" Margin="0,275,0,0" VerticalAlignment="Top" Width="150" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FFDDDDDD" Height="30" Click="settingsBtt_Click" BorderThickness="0,0,0,0"/>
                 <Button x:Name="exitMenuBtt" Style="{StaticResource menuBtts}" Content="Exit" ToolTip="Exit AMT Revolution" HorizontalAlignment="Left" Margin="0,305,0,0" VerticalAlignment="Top" Width="150" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FFDDDDDD" Height="30" Click="exitBtt_Click" BorderThickness="0,0,0,0" IsManipulationEnabled="True"/>
             </Grid>
+        </Grid>
+        <Grid Name="closureCodePanel" Height="300" Width="300" HorizontalAlignment="Center" Margin="1250,0,0,0">
+            <Border BorderThickness="0" Background="#4C808080" Margin="0,0,-150,0" Width="350" Height="300" >
+                <Grid x:Name="ccGrid" Background="#4C808080">
+                    <Button x:Name="detachCcBtt" Content="" HorizontalAlignment="Left" Margin="311,10,0,0" VerticalAlignment="Top" Width="29" Height="28" Background="#FFDDDDDD" BorderBrush="{x:Null}" Foreground="{x:Null}" BorderThickness="0" Click="detachCcBtt_Click">
+                        <Button.OpacityMask>
+                            <ImageBrush Stretch="Uniform" ImageSource="/AMTRevolution;component/IconRes/WindowIcons/detach-48.png"/>
+                        </Button.OpacityMask>
+                    </Button>
+                    <Button x:Name="minCcBtt" Content="" HorizontalAlignment="Left" Margin="277,10,0,0" VerticalAlignment="Top" Width="29" Height="28" Background="#FFDDDDDD" BorderBrush="{x:Null}" Foreground="{x:Null}" BorderThickness="0" Click="minCcBtt_Click">
+                        <Button.OpacityMask>
+                            <ImageBrush Stretch="Uniform" ImageSource="/AMTRevolution;component/IconRes/WindowIcons/minimize_window-48.png"/>
+                        </Button.OpacityMask>
+                    </Button>
+                    <TextBox x:Name="incCcTxtBox" HorizontalAlignment="Left" Height="16" Margin="52,75,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="173" BorderThickness="0" BorderBrush="Black" Foreground="#FFDDDDDD" Background="{x:Null}" KeyDown="incCcTxtBox_KeyDown" TextChanged="incCcTxtBox_TextChanged"/>
+                    <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="10,75,0,0" TextWrapping="Wrap" Text="INC:" VerticalAlignment="Top" Foreground="#FFDDDDDD"/>
+                    <TextBlock x:Name="textBlock_1" HorizontalAlignment="Left" Margin="10,91,0,0" TextWrapping="Wrap" Text="Initials:" VerticalAlignment="Top" Foreground="#FFDDDDDD"/>
+                    <TextBox x:Name="initCcTxtBox" HorizontalAlignment="Left" Height="16" Margin="51,91,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="173" BorderThickness="0" BorderBrush="Black" Foreground="#FFDDDDDD" Background="{x:Null}" TextChanged="initCcTxtBox_TextChanged"/>
+                    <TextBlock x:Name="textBlock_2" HorizontalAlignment="Left" Margin="10,107,0,0" TextWrapping="Wrap" Text="CC:" VerticalAlignment="Top" Foreground="#FFDDDDDD"/>
+                    <TextBox x:Name="CcTxtBox" HorizontalAlignment="Left" Height="16" Margin="52,107,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="173" BorderThickness="0" BorderBrush="Black" Foreground="#FFDDDDDD" Background="{x:Null}"/>
+                    <TextBlock x:Name="labelCC" HorizontalAlignment="Left" Margin="181,75,0,0" TextWrapping="Wrap" Text="Insert INC/CRQ number" VerticalAlignment="Top" Height="16" Width="159" Foreground="#FFDDDDDD"/>
+                    <TextBlock x:Name="initLabel" HorizontalAlignment="Left" Margin="181,91,0,0" TextWrapping="Wrap" Text="Insert your initials" VerticalAlignment="Top" Height="16" Width="159" Foreground="#FFDDDDDD"/>
+                </Grid>
+            </Border>
         </Grid>
         <Button x:Name="debugModeBtt" Content="Button" ToolTip="Debug Mode Enabled" HorizontalAlignment="Left" Margin="1027,545,0,0" VerticalAlignment="Top" Width="63" RenderTransformOrigin="0.501,1.878" BorderBrush="{x:Null}" Foreground="{x:Null}" Background="#FFDDDDDD" Height="45" IsManipulationEnabled="True">
             <Button.OpacityMask>
