--- a/AMTRevolution/GUI/ClosureCode.xaml
+++ b/AMTRevolution/GUI/ClosureCode.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AMTRevolution.GUI"
         mc:Ignorable="d"
-        Title="ClosureCode" Height="300" Width="300" WindowStyle="None" AllowsTransparency="True" WindowStartupLocation="CenterScreen" Icon="../IconRes/WindowIcons/vf.ico" ResizeMode="NoResize" MouseDown="Window_MouseDown">
+        Title="ClosureCode" Height="300" Width="300" WindowStyle="None" AllowsTransparency="True" WindowStartupLocation="CenterOwner" Icon="../IconRes/WindowIcons/vf.ico" ResizeMode="NoResize" MouseDown="Window_MouseDown">
     <Window.Background>
         <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
             <GradientStop Color="Black" Offset="0"/>
