--- a/AMTRevolution/GUI/SplashScreen/splashScreen.xaml
+++ b/AMTRevolution/GUI/SplashScreen/splashScreen.xaml
@@ -1,4 +1,4 @@
-﻿<Window
+<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,7 +7,7 @@
         xmlns:splash="clr-namespace:AMTRevolution.GUI.SplashScreen"
         xmlns:gif="http://wpfanimatedgif.codeplex.com" x:Name="splashScreen1" x:Class="AMTRevolution.splashScreen"
         mc:Ignorable="d"
-        Title="splashScreen" Height="240" Width="500" WindowStartupLocation="CenterScreen" WindowStyle="None" ResizeMode="NoResize" Icon="../../IconRes/WindowIcons/vf.ico">
+        Title="AMTRevolution" Height="240" Width="500" WindowStartupLocation="CenterScreen" WindowStyle="None" ResizeMode="NoResize" Icon="../../IconRes/WindowIcons/vf.ico">
     <Window.Resources>
         <Style x:Key="menuBtts" TargetType="Button">
         <Setter Property="Background" Value="Green"/>
