--- a/AMTRevolution/GUI/ClosureCode.xaml
+++ b/AMTRevolution/GUI/ClosureCode.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="AMTRevolution.GUI.ClosureCode"
+<Window x:Class="AMTRevolution.GUI.ClosureCode"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AMTRevolution.GUI"
         mc:Ignorable="d"
-        Title="ClosureCode" Height="300" Width="300" WindowStyle="None" AllowsTransparency="True" WindowStartupLocation="CenterOwner" Icon="../IconRes/WindowIcons/vf.ico" ResizeMode="NoResize" MouseDown="Window_MouseDown">
+        Title="ClosureCode" Height="300" Width="350" WindowStyle="None" AllowsTransparency="True" WindowStartupLocation="CenterOwner" Icon="../IconRes/WindowIcons/vf.ico" ResizeMode="NoResize" MouseDown="Window_MouseDown">
     <Window.Background>
         <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
             <GradientStop Color="Black" Offset="0"/>
@@ -13,12 +13,12 @@
         </LinearGradientBrush>
     </Window.Background>
     <Grid>
-        <Button x:Name="exitBtt" Content="" ToolTip="Exit AMT Revolution" HorizontalAlignment="Left" Margin="261,10,0,0" VerticalAlignment="Top" Width="29" RenderTransformOrigin="1.211,0.63" BorderBrush="{x:Null}" Foreground="{x:Null}" Click="exitBtt_Click" Height="28" VerticalContentAlignment="Top" HorizontalContentAlignment="Right">
+        <Button x:Name="exitBtt" Content="" ToolTip="Exit" HorizontalAlignment="Left" Margin="311,10,0,0" VerticalAlignment="Top" Width="29" RenderTransformOrigin="1.211,0.63" BorderBrush="{x:Null}" Foreground="{x:Null}" Click="exitBtt_Click" Height="28" VerticalContentAlignment="Top" HorizontalContentAlignment="Right">
             <Button.OpacityMask>
                 <ImageBrush ImageSource="/AMTRevolution;component/IconRes/WindowIcons/exit-48.png" Stretch="Uniform"/>
             </Button.OpacityMask>
         </Button>
-        <Button x:Name="minBtt" Content="" ToolTip="Minimize AMT Revolution" HorizontalAlignment="Left" Margin="227,10,0,0" VerticalAlignment="Top" Width="29" RenderTransformOrigin="1.211,0.63" BorderBrush="{x:Null}" Foreground="{x:Null}" Click="minBtt_Click" Height="28">
+        <Button x:Name="minBtt" Content="" ToolTip="Minimize" HorizontalAlignment="Left" Margin="277,10,0,0" VerticalAlignment="Top" Width="29" RenderTransformOrigin="1.211,0.63" BorderBrush="{x:Null}" Foreground="{x:Null}" Click="minBtt_Click" Height="28">
             <Button.OpacityMask>
                 <ImageBrush Stretch="Uniform" ImageSource="/AMTRevolution;component/IconRes/WindowIcons/minimize_window-48.png"/>
             </Button.OpacityMask>
