--- a/AMTRevolution/GUI/MainWindow.xaml
+++ b/AMTRevolution/GUI/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<!-- AMTRevolution -->
+<!-- AMTRevolution -->
 <!-- Hugo Gonçalves -->
 <!-- Rui Gonçalves -->
 <Window x:Class="AMTRevolution.MainWindow"
@@ -80,12 +80,12 @@
         <Grid Name="closureCodePanel" Height="300" Width="300" HorizontalAlignment="Center" Margin="1250,0,0,0">
             <Border BorderThickness="0" Background="#4C808080" Margin="0,0,-150,0" Width="350" Height="300" >
                 <Grid x:Name="ccGrid" Background="#4C808080">
-                    <Button x:Name="detachCcBtt" Content="" HorizontalAlignment="Left" Margin="311,10,0,0" VerticalAlignment="Top" Width="29" Height="28" Background="#FFDDDDDD" BorderBrush="{x:Null}" Foreground="{x:Null}" BorderThickness="0" Click="detachCcBtt_Click">
+                    <Button x:Name="detachCcBtt" ToolTip="Detach window" Content="" HorizontalAlignment="Left" Margin="311,10,0,0" VerticalAlignment="Top" Width="29" Height="28" Background="#FFDDDDDD" BorderBrush="{x:Null}" Foreground="{x:Null}" BorderThickness="0" Click="detachCcBtt_Click">
                         <Button.OpacityMask>
                             <ImageBrush Stretch="Uniform" ImageSource="/AMTRevolution;component/IconRes/WindowIcons/detach-48.png"/>
                         </Button.OpacityMask>
                     </Button>
-                    <Button x:Name="minCcBtt" Content="" HorizontalAlignment="Left" Margin="277,10,0,0" VerticalAlignment="Top" Width="29" Height="28" Background="#FFDDDDDD" BorderBrush="{x:Null}" Foreground="{x:Null}" BorderThickness="0" Click="minCcBtt_Click">
+                    <Button x:Name="minCcBtt" Content="" ToolTip="Minimize" HorizontalAlignment="Left" Margin="277,10,0,0" VerticalAlignment="Top" Width="29" Height="28" Background="#FFDDDDDD" BorderBrush="{x:Null}" Foreground="{x:Null}" BorderThickness="0" Click="minCcBtt_Click">
                         <Button.OpacityMask>
                             <ImageBrush Stretch="Uniform" ImageSource="/AMTRevolution;component/IconRes/WindowIcons/minimize_window-48.png"/>
                         </Button.OpacityMask>
